overflow and respo fixes

--- a/client/styles/main.css
+++ b/client/styles/main.css
@@ -90,46 +90,3 @@ body.show-modal {
   padding: 10px;
   text-align: center;
 }
-
-/* TOPMOST CONTROLS */
-
-.top-controls {
-  margin: 5px 5px 20px 5px;
-  display: flex;
-  justify-content: space-between;
-}
-
-.top-controls .search-input {
-  border-radius: 3px;
-  width: 300px;
-}
-
-.theme-switcher {
-  display: flex;
-}
-
-.theme-switcher button {
-  display: block;
-  border-radius: 0;
-}
-
-.theme-switcher button svg {
-  scale: 0.8;
-}
-
-.theme-switcher button.selected {
-  box-shadow: 0 0 5px inset var(--color-button-selected-shadow);
-}
-
-.theme-switcher button:first-child {
-  border-top-left-radius: 3px;
-  border-bottom-left-radius: 3px;
-  border-right: 0;
-  display: block;
-}
-
-.theme-switcher button:last-child {
-  border-top-right-radius: 3px;
-  border-bottom-right-radius: 3px;
-  border-left: 0;
-}
